Issue #2342953 by joseph.olstad: Fixed Admin dropdown not aligned/styled correctly in IE9.

--- a/sass/ie/ie.scss
+++ b/sass/ie/ie.scss
@@ -27,7 +27,6 @@ kbd {
 
 .form-type-select {
     position:relative;
-    display:inline-block;
     z-index:0
 }
 .form-type-select select {
